--- a/.drone.yml
+++ b/.drone.yml
@@ -6,13 +6,17 @@ steps:
   - name: Test Go
     image: golang:1.25
     commands:
+      - apt-get update && apt-get install -y xz-utils
+      - curl https://qlty.sh | sh
       - make test
       - make race
-      - exitcode="$?"
       - make cover
+      - ~/.qlty/bin/qlty coverage publish c.out --override-commit-sha "$DRONE_COMMIT_SHA" --override-branch "$DRONE_BRANCH" --override-build-id "$DRONE_BUILD_NUMBER"
       - make benchmark
       - make cpuprof
       - make memprof
+    environment:
+      QLTY_COVERAE_TOKEN: qltcp_7zcAFXn6fkui7G14
 
   - name: Test Makefile
     image: cytopia/checkmake:latest
